:sparkles: profile-img

--- a/index.css
+++ b/index.css
@@ -6,3 +6,35 @@
   display: flex;
   justify-content: space-between;
 }
+
+.profile-container {
+  width: 100vw;
+
+  border: 1px solid var(--black);
+  border-radius: 3px 3px 0 0;
+}
+
+.profile {
+  margin-left: 30px;
+
+  display: flex;
+  align-items: flex-end;
+  gap: 15px;
+}
+
+.profile-img {
+  width: 120px;
+  height: 150px;
+
+  border: 1px solid var(--black);
+  border-radius: 3px;
+}
+
+.profile-img-container {
+  position: relative;
+  top: -30px;
+}
+
+.profile-name-container {
+  margin-bottom: 60px;
+}
