--- a/global.css
+++ b/global.css
@@ -12,4 +12,21 @@
 
 body {
   background-color: var(--gray);
+
+  color: var(--black);
+  font-family: "Bai Jamjuree";
+}
+
+h1,
+h2 {
+  font-weight: 500;
+}
+
+h1 {
+  color: var(--red);
+  font-size: 24px;
+}
+
+h2 {
+  font-size: 14px;
 }
