--- a/index.css
+++ b/index.css
@@ -46,3 +46,23 @@
   flex-direction: column;
   gap: 15px;
 }
+
+.profile-buttons {
+  margin: 30px 0 160px 30px;
+
+  display: flex;
+  gap: 15px;
+}
+
+.button {
+  width: 81px;
+  height: 28px;
+
+  padding: 7px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  font-size: 12px;
+}
